[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Colectables/Timer_Challenge/TimerChallenge.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="TimerChallenge" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 440.0
margin_top = 128.0
margin_right = 568.0
margin_bottom = 192.0
text = "1123
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_TimerChallenge_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
